# sndMuonFlux

./: .gitignore  2023_ions.py  CMakeLists.txt  MuonFlux.csv  README.md  extractBunchStruct.py  flux-meanRes.ipynb  getLumi.py  getMuonFlux.py  getMuonFluxMC.py  getMuonTrackRate.py  getNtracks.py  getTrkeff.py  hough.ipynb  m.ipynb  mu_gun  muon_flux-mc.py  muon_flux.py  plotMuonFlux.py  plotting.py  runNtracks.py  runs2024.csv  runs2024.txt  supertable2024.csv  trkeff-mct-pp25.txt
bunchStruct/: bunchStruct.py
bunch_struct/: bunch_struct.py
eventRate/: eventRate.py  event_rate.py
hitDistribution/: hit_distr-ds.py
lumi/: extract_lumi.py  lumi.py
muGun/: core_dump_76420  muGun.sh
muonFluxUtils/: CMakeLists.txt  LinkDef.h  muonFluxUtils.cxx  muonFluxUtils.h
muonScattering/: helpers.py  hists.py  ineffFactor.py
nTracks/: 0_nTracks.sub  7080trks.csv  CMakeLists.txt  LinkDef.h  args.txt  helpers.py  idioniso.cc  meanRes.txt  meanResiduals.py  nTracks.csv  nTracks.cxx  nTracks.h  nTracks.ipynb  nTracks.py  nTracks.sh  nTracks_lt80mrad.csv  st-no-ht.py
nTracks/err/: proc_218.err  proc_41.err
ntracks/: ds-ht.py  ntracks.py  ntracks_scat.py
prpts/: ang_diff.py  angles.ipynb  hists.py  prpts.py  prptsData.py  prptsSim.py  prpts_mugun.py  prpts_noDStrks.py
prpts/ds_ineff/: IneffF.py  ineff-prpts-sim.py
prpts/helpers/: hists.py  mugun.py
pythonHelpers/: bunch_slots.py  bunch_struct.py  filling_scheme.py  general.py  lumi.py  muon_flux.py  nTracks.py  trkeff.py
qdc/: qdc.py
scripts/: extractBunchStruct.py  getLumi.py  getMuonFlux.py  getNtracks.py  getTrkeff.py
trkeff/: CMakeLists.txt  IneffF.py  LinkDef.h  chi2ndfMax_plots.py  chi2ndfVals.csv  chi2ndfVals2.txt  ds-ineff.py  ds_ineff_process.py  energies.txt  eventDisplay.txt  f.txt  getAsCsv.py  getTrkeffMCT_cli.cxx  getTrkeffTT_cli.cxx  histParams.conf  histParamsMC.conf  histograms.cxx  histograms.h  hists.py  ineff-factor-theory.py  muGun_plots.py  plotting.py  process.py  rt_N.py  selection.py  tc_N.py  test.root  trkeff-E.ipynb  trkeff-chi2ndf.ipynb  trkeff.py  trkeffMCT.cxx  trkeffMCT.h  trkeffTC.cxx  trkeffTC.h  trkeffTT.cxx  trkeffTT.h  trkeffUtils.cxx  trkeffUtils.h  trkeff_data_tc.py  trkeff_mugun_rt.py  (+3 more)
trkeff/get_hists/: chi2_h.py  chi2ndf_h.py  d0_h.py  e_h.py  n_h.py  trkP_h.py  x_h.py  xz_h.py  y_h.py  yz_h.py
trkeff/helpers/: hists.py  misc.py  mugun.py  plots.py  toCsv.py  trkSelection.py
trkeff/helpers/get_hists/: chi2_h.py  chi2ndf_h.py  d0_h.py  e_h.py  n_h.py  trkP_h.py  x_h.py  xz_h.py  y_h.py  yz_h.py
trkeff/htcondor/: 0_trkeff_varAng.sub  0_trkeff_varZref.sub  args_varAng.txt  args_varZref.txt  gen_varAng_args.sh  gen_varZref_args.sh  idioniso.cc  trkeff_varAng.sh  trkeff_varZref.sh
trkeff/htcondor/error/: trkeff_varAng_16.err
trkeff/htcondor/output/: trkeff_varAng_0.out  trkeff_varAng_1.out  trkeff_varAng_10.out  trkeff_varAng_11.out  trkeff_varAng_12.out  trkeff_varAng_13.out  trkeff_varAng_14.out  trkeff_varAng_15.out  trkeff_varAng_16.out  trkeff_varAng_2.out  trkeff_varAng_3.out  trkeff_varAng_4.out  trkeff_varAng_5.out  trkeff_varAng_6.out  trkeff_varAng_7.out  trkeff_varAng_8.out  trkeff_varAng_9.out  trkeff_varZref_0.out  trkeff_varZref_1.out  trkeff_varZref_10.out  trkeff_varZref_11.out  trkeff_varZref_12.out  trkeff_varZref_13.out  trkeff_varZref_14.out  trkeff_varZref_15.out  trkeff_varZref_16.out  trkeff_varZref_17.out  trkeff_varZref_18.out  trkeff_varZref_19.out  trkeff_varZref_2.out  trkeff_varZref_20.out  trkeff_varZref_21.out  trkeff_varZref_22.out  trkeff_varZref_23.out  trkeff_varZref_24.out  trkeff_varZref_25.out  trkeff_varZref_26.out  trkeff_varZref_27.out  trkeff_varZref_28.out  trkeff_varZref_29.out  (+16 more)
trkeff/ineffEvents/: _ineffEvents01.py  _ineffEvents02.py  d.pkl  ineffEvents.py  ineffEventsSim.py  ineffHists.py  ineffUtils.py
trkeff/rt_energy/: rt_energy.py
utils/: muflux.py  test.py
